[package]
name = "oracle_sql_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = "0.5.7"
chrono = "0.4.26"
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.12.1"
thiserror = "1.0.58"
num_cpus = "1.0"
proc-macro2 = "1.0.79"