[package]
name = "oracle_sql_tools"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "An extension to the Rust-Oracle crate to make simple queries easy to implement."
readme = "README.md"
repository = "https://github.com/Cosiamo/oracle_sql_tools"
keywords = ["sql", "oracle", "database", "concurrency", "parallelism"]
categories = ["concurrency", "database", "database-implementations"]
exclude = ["main.rs", ".vscode/*", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oracle = { version = "0.5.7", features = ["chrono"]}
chrono = "0.4.26"
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.12.1"
thiserror = "1.0.58"
num_cpus = "1.0"
proc-macro2 = "1.0.79"
indicatif = "0.17.6"